k8s_3apps/deploy_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-reverse-proxy
  template:
    metadata:
      labels:
        app: nginx-reverse-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy-svc
spec:
  selector:
    app: nginx-reverse-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-reverse-proxy-ingress
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /pythonapp
        pathType: Prefix
        backend:
          service:
            name: pythonapp-svc
            port:
              number: 8081
      - path: /goapp
        pathType: Prefix
        backend:
          service:
            name: goapp-svc
            port:
              number: 8082
