k8s_3apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx  # Make sure this matches the namespace where your Ingress Controller is running
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: pythonapp-svc
                port:
                  number: 8081
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: goapp-svc
                port:
                  number: 8082
