k8s_3apps/ingress_for_apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: pythonapp-svc
                port:
                  number: 8081
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: goapp-svc
                port:
                  number: 8082
